Extending updating role considerably